--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "start:dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
     "file-loader": "^6.2.0",
     "webpack": "^5.53.0",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
     "bootstrap": "^5.1.1",
